@@ -6,6 +6,7 @@ import org.apereo.cas.config.CasCoreAutoConfiguration;
 import org.apereo.cas.config.CasCoreCookieAutoConfiguration;
 import org.apereo.cas.config.CasCoreLogoutAutoConfiguration;
 import org.apereo.cas.config.CasCoreNotificationsAutoConfiguration;
+import org.apereo.cas.config.CasCoreScriptingAutoConfiguration;
 import org.apereo.cas.config.CasCoreServicesAutoConfiguration;
 import org.apereo.cas.config.CasCoreTicketsAutoConfiguration;
 import org.apereo.cas.config.CasCoreUtilAutoConfiguration;
@@ -16,6 +17,7 @@ import org.apereo.cas.services.support.RegisteredServiceMappedRegexAttributeFilt
 import org.apereo.cas.services.support.RegisteredServiceRegexAttributeFilter;
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.RandomUtils;
+import org.apereo.cas.util.spring.boot.SpringBootTestAutoConfigurations;
 import com.google.common.collect.ArrayListMultimap;
 import lombok.AccessLevel;
 import lombok.Getter;
@@ -30,28 +32,17 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
 import org.junitpioneer.jupiter.RetryingTest;
 import org.springframework.boot.SpringBootConfiguration;
-import org.springframework.boot.actuate.autoconfigure.endpoint.EndpointAutoConfiguration;
 import org.springframework.boot.autoconfigure.ImportAutoConfiguration;
-import org.springframework.boot.autoconfigure.aop.AopAutoConfiguration;
-import org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration;
-import org.springframework.boot.autoconfigure.web.servlet.DispatcherServletAutoConfiguration;
-import org.springframework.boot.autoconfigure.web.servlet.ServletWebServerFactoryAutoConfiguration;
-import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
-import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
-import org.springframework.context.annotation.Import;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import static org.awaitility.Awaitility.*;
@@ -97,7 +88,7 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @BeforeEach
-    public void setUp() throws Exception {
+    void setUp() throws Exception {
         serviceRegistry = getNewServiceRegistry();
         clearServiceRegistry();
         initializeServiceRegistry();
@@ -120,7 +111,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySave() {
         getRegisteredServiceTypes().forEach(type -> {
-            val svc = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val svc = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             serviceRegistry.save(() -> svc,
                 result -> assertEquals(result.getServiceId(), svc.getServiceId(), type::getName),
                 1);
@@ -131,8 +123,10 @@ public abstract class AbstractServiceRegistryTests {
     void verifySaveAndLoad() {
         getRegisteredServiceTypes().forEach(type -> {
             serviceRegistry.deleteAll();
-            for (var i = 0; i < getLoadSize(); i++) {
-                val svc = buildRegisteredServiceInstance(i, type);
+            val loadSize = getLoadSize();
+            for (var i = 0; i < loadSize; i++) {
+                val svc = buildRegisteredServiceInstance(i, type)
+                    .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
                 serviceRegistry.save(svc);
 
                 val svc2 = serviceRegistry.findServiceByExactServiceName(svc.getName());
@@ -151,28 +145,31 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    void verifyNonExistingService() throws Throwable {
+    void verifyNonExistingService() {
         assertNull(serviceRegistry.findServiceById(9999991));
     }
 
     @Test
     void verifySavingServices() {
         getRegisteredServiceTypes().forEach(type -> {
-            val registeredService = buildRegisteredServiceInstance(100, type);
-            serviceRegistry.save(registeredService);
+            val registeredService = buildRegisteredServiceInstance(100, type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
+            val savedService = serviceRegistry.save(registeredService);
             val services = serviceRegistry.load();
-            assertTrue(services.stream().anyMatch(svc -> svc.equals(registeredService)));
-            val registeredService2 = buildRegisteredServiceInstance(101, type);
-            serviceRegistry.save(registeredService2);
+            assertTrue(services.stream().anyMatch(svc -> svc.equals(savedService)));
+            val registeredService2 = buildRegisteredServiceInstance(101, type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
+            val savedService2 = serviceRegistry.save(registeredService2);
             val services2 = serviceRegistry.load();
-            assertTrue(services2.stream().anyMatch(svc -> svc.equals(registeredService)));
+            assertTrue(services2.stream().anyMatch(svc -> svc.equals(savedService2)));
         });
     }
 
     @Test
     void verifyUpdatingServices() {
         getRegisteredServiceTypes().forEach(type -> {
-            serviceRegistry.save(buildRegisteredServiceInstance(200, type));
+            val toSave = buildRegisteredServiceInstance(200, type).setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
+            serviceRegistry.save(toSave);
             val services = serviceRegistry.load();
             assertFalse(services.isEmpty());
             val rs = (BaseRegisteredService) serviceRegistry.findServiceById(services.iterator().next().getId());
@@ -183,10 +180,10 @@ public abstract class AbstractServiceRegistryTests {
             rs.setServiceId("https://hello.world");
             rs.setTheme("some-theme");
 
-            if (rs instanceof CasRegisteredService) {
+            if (rs instanceof final CasRegisteredService cas) {
                 val policy = new RegexMatchingRegisteredServiceProxyPolicy();
                 policy.setPattern("https");
-                ((CasRegisteredService) rs).setProxyPolicy(policy);
+                cas.setProxyPolicy(policy);
             }
             rs.setAttributeReleasePolicy(new ReturnAllowedAttributeReleasePolicy());
             assertNotNull(serviceRegistry.save(rs), type::getName);
@@ -206,8 +203,10 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyDeletingSingleService() {
         getRegisteredServiceTypes().forEach(type -> {
-            val rs = buildRegisteredServiceInstance(300, type);
-            val rs2 = buildRegisteredServiceInstance(301, type);
+            val rs = buildRegisteredServiceInstance(300, type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
+            val rs2 = buildRegisteredServiceInstance(301, type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             serviceRegistry.save(rs2);
             serviceRegistry.save(rs);
             serviceRegistry.load();
@@ -223,18 +222,21 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyDeletingServices() {
         getRegisteredServiceTypes().forEach(type -> {
-            serviceRegistry.save(buildRegisteredServiceInstance(400, type));
-            serviceRegistry.save(buildRegisteredServiceInstance(401, type));
+            serviceRegistry.save(buildRegisteredServiceInstance(400, type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE));
+            serviceRegistry.save(buildRegisteredServiceInstance(401, type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE));
             val services = serviceRegistry.load();
             services.forEach(registeredService -> serviceRegistry.delete(registeredService));
             assertEquals(0, serviceRegistry.load().size());
         });
     }
 
-    @Test
+    @RetryingTest(2)
     void verifyExpiredServiceDeleted() {
         getRegisteredServiceTypes().forEach(type -> {
-            val service = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val service = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             service.setExpirationPolicy(new DefaultRegisteredServiceExpirationPolicy(true, LocalDateTime.now(ZoneId.systemDefault()).minusSeconds(1)));
             val savedService = serviceRegistry.save(service);
             serviceRegistry.load();
@@ -245,13 +247,15 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyServiceLookupByServiceId() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r1 = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r1 = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val id = UUID.randomUUID().toString();
             r1.setServiceId(".*%s.*".formatted(id));
             r1.setEvaluationOrder(100);
             serviceRegistry.save(r1);
 
-            val r2 = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r2 = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             r2.setServiceId(r1.getServiceId());
             r2.setEvaluationOrder(1);
             serviceRegistry.save(r2);
@@ -265,7 +269,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyExpiredServiceDisabled() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val expirationDate = LocalDateTime.now(ZoneId.systemDefault()).plusSeconds(1);
             r.setExpirationPolicy(new DefaultRegisteredServiceExpirationPolicy(false, expirationDate));
             val r2 = serviceRegistry.save(r);
@@ -277,9 +282,10 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void checkSaveMethodWithNonExistentServiceAndNoAttributes() {
+    void checkSaveMethodWithNonExistentServiceAndNoAttributes() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val r2 = serviceRegistry.save(r);
             val r3 = serviceRegistry.findServiceById(r2.getId());
             assertEquals(r2, r3);
@@ -289,9 +295,10 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void checkSaveMethodWithDelegatedAuthnPolicy() {
+    void checkSaveMethodWithDelegatedAuthnPolicy() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val strategy = new DefaultRegisteredServiceAccessStrategy();
             val providers = CollectionUtils.wrapList("one", "two");
             strategy.setDelegatedAuthenticationPolicy(new DefaultRegisteredServiceDelegatedAuthenticationPolicy(providers, true, false, null));
@@ -303,9 +310,10 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void execSaveWithAuthnMethodPolicy() {
+    void execSaveWithAuthnMethodPolicy() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val policy = new DefaultRegisteredServiceMultifactorPolicy();
             policy.setFailureMode(BaseMultifactorAuthenticationProviderProperties.MultifactorAuthenticationProviderFailureModes.PHANTOM);
 
@@ -322,9 +330,10 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void execSaveMethodWithDefaultUsernameAttribute() {
+    void execSaveMethodWithDefaultUsernameAttribute() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             r.setUsernameAttributeProvider(new DefaultRegisteredServiceUsernameProvider());
             val r2 = serviceRegistry.save(r);
             val r3 = serviceRegistry.findServiceById(r2.getId());
@@ -333,9 +342,10 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void execSaveMethodWithConsentPolicy() {
+    void execSaveMethodWithConsentPolicy() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val policy = new ReturnAllAttributeReleasePolicy();
             policy.setConsentPolicy(new DefaultRegisteredServiceConsentPolicy(CollectionUtils.wrapSet("test"),
                 CollectionUtils.wrapSet("test")));
@@ -347,9 +357,10 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void ensureSaveMethodWithDefaultPrincipalAttribute() {
+    void ensureSaveMethodWithDefaultPrincipalAttribute() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
 
             val provider = new PrincipalAttributeRegisteredServiceUsernameProvider();
             provider.setCanonicalizationMode("UPPER");
@@ -364,7 +375,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySaveMethodWithDefaultAnonymousAttribute() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             r.setUsernameAttributeProvider(new AnonymousRegisteredServiceUsernameAttributeProvider(
                 new ShibbolethCompatiblePersistentIdGenerator("helloworld")
             ));
@@ -381,7 +393,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyServiceExpirationPolicy() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             r.setExpirationPolicy(new DefaultRegisteredServiceExpirationPolicy(true, LocalDate.now(ZoneId.systemDefault()).toString()));
             val r2 = serviceRegistry.save(r);
             val r3 = serviceRegistry.findServiceById(r2.getId());
@@ -394,7 +407,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySaveAttributeReleasePolicy() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             r.setAttributeReleasePolicy(new ReturnAllAttributeReleasePolicy());
             val r2 = serviceRegistry.save(r);
             val r3 = serviceRegistry.findServiceById(r2.getId());
@@ -407,7 +421,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySaveMethodWithExistingServiceNoAttribute() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             serviceRegistry.save(r);
             r.setTheme("mytheme");
 
@@ -421,7 +436,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySaveAttributeReleasePolicyMappingRules() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val map = ArrayListMultimap.<String, Object>create();
             map.put("attr1", "newattr1");
             map.put("attr2", "newattr2");
@@ -443,7 +459,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySaveAttributeReleasePolicyAllowedAttrRules() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val policy = new ReturnAllowedAttributeReleasePolicy();
             policy.setAllowedAttributes(Arrays.asList("1", "2", "3"));
             r.setAttributeReleasePolicy(policy);
@@ -460,22 +477,23 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifySaveAttributeReleasePolicyAllowedAttrRulesAndFilter() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
-            r.setAccessStrategy(new DefaultRegisteredServiceAccessStrategy(true, false));
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
+            registeredService.setAccessStrategy(new DefaultRegisteredServiceAccessStrategy(true, false));
 
-            if (r instanceof CasRegisteredService) {
+            if (registeredService instanceof final CasRegisteredService casRegisteredService) {
                 val policy = new RegexMatchingRegisteredServiceProxyPolicy();
                 policy.setPattern("https");
-                ((CasRegisteredService) r).setProxyPolicy(policy);
+                casRegisteredService.setProxyPolicy(policy);
             }
-            r.getAuthenticationPolicy().getRequiredAuthenticationHandlers().addAll(CollectionUtils.wrapHashSet("h1", "h2"));
+            registeredService.getAuthenticationPolicy().getRequiredAuthenticationHandlers().addAll(CollectionUtils.wrapHashSet("h1", "h2"));
 
             val policy = new ReturnAllowedAttributeReleasePolicy();
             policy.setAllowedAttributes(Arrays.asList("1", "2", "3"));
-            r.setAttributeReleasePolicy(policy);
-            r.getAttributeReleasePolicy().setAttributeFilter(new RegisteredServiceRegexAttributeFilter("\\w+"));
+            registeredService.setAttributeReleasePolicy(policy);
+            registeredService.getAttributeReleasePolicy().setAttributeFilter(new RegisteredServiceRegexAttributeFilter("\\w+"));
 
-            val r2 = serviceRegistry.save(r);
+            val r2 = serviceRegistry.save(registeredService);
             val r3 = serviceRegistry.findServiceById(r2.getId());
 
             assertEquals(r2, r3);
@@ -487,7 +505,8 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyServiceType() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val r2 = serviceRegistry.save(r);
             assertSame(r2.getClass(), type);
         });
@@ -497,13 +516,14 @@ public abstract class AbstractServiceRegistryTests {
     void verifyServiceRemovals() {
         getRegisteredServiceTypes().forEach(type -> {
             val list = IntStream.range(1, 5)
-                .mapToObj(i -> buildRegisteredServiceInstance(RandomUtils.nextInt(), type))
+                .mapToObj(i -> buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                    .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE))
                 .map(r -> serviceRegistry.save(r))
-                .collect(Collectors.toCollection(() -> new ArrayList<>(5)));
+                .toList();
 
             list.forEach(Unchecked.consumer(r2 -> {
-                Thread.sleep(500);
-                serviceRegistry.delete(r2);
+                Thread.sleep(1000);
+                assertTrue(serviceRegistry.delete(r2));
                 Thread.sleep(2000);
                 assertNull(serviceRegistry.findServiceById(r2.getId()));
             }));
@@ -511,18 +531,19 @@ public abstract class AbstractServiceRegistryTests {
     }
 
     @Test
-    public void checkForAuthorizationStrategy() {
+    void checkForAuthorizationStrategy() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val authz = new DefaultRegisteredServiceAccessStrategy(false, false);
 
             val attrs = new HashMap<String, Set<String>>();
-            attrs.put("cn", Collections.singleton("v1, v2, v3"));
-            attrs.put("memberOf", Collections.singleton("v4, v5, v6"));
+            attrs.put("cn", Set.of("v1, v2, v3"));
+            attrs.put("memberOf", Set.of("v4, v5, v6"));
             authz.setRequiredAttributes(attrs);
-            r.setAccessStrategy(authz);
+            registeredService.setAccessStrategy(authz);
 
-            val r2 = serviceRegistry.save(r);
+            val r2 = serviceRegistry.save(registeredService);
             val r3 = serviceRegistry.findServiceById(r2.getId());
             assertEquals(r2, r3);
         });
@@ -531,13 +552,14 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyAccessStrategyWithStarEndDate() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val authz = new TimeBasedRegisteredServiceAccessStrategy();
             authz.setStartingDateTime(ZonedDateTime.now(ZoneOffset.UTC).plusDays(1).toString());
             authz.setEndingDateTime(ZonedDateTime.now(ZoneOffset.UTC).plusDays(10).toString());
-            r.setAccessStrategy(authz);
+            registeredService.setAccessStrategy(authz);
 
-            val r2 = serviceRegistry.save(r);
+            val r2 = serviceRegistry.save(registeredService);
             val r3 = serviceRegistry.findServiceById(r2.getId());
             assertEquals(r2, r3);
         });
@@ -546,23 +568,25 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyAccessStrategyWithEndpoint() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val authz = new RemoteEndpointServiceAccessStrategy();
             authz.setEndpointUrl("http://www.google.com?this=that");
             authz.setAcceptableResponseCodes("200,405,403");
-            r.setAccessStrategy(authz);
+            registeredService.setAccessStrategy(authz);
 
-            val r2 = serviceRegistry.save(r);
+            val r2 = serviceRegistry.save(registeredService);
             val r3 = serviceRegistry.findServiceById(r2.getId());
             assertEquals(r2, r3);
         });
     }
 
     @Test
-    public void serializePublicKeyForServiceAndVerify() {
+    void serializePublicKeyForServiceAndVerify() {
         getRegisteredServiceTypes().forEach(type -> {
             val publicKey = new RegisteredServicePublicKeyImpl("classpath:RSA1024Public.key", "RSA");
-            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             registeredService.setPublicKey(publicKey);
 
             serviceRegistry.save(registeredService);
@@ -574,15 +598,16 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyMappedRegexAttributeFilter() {
         getRegisteredServiceTypes().forEach(type -> {
-            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
 
-            val p = new ReturnAllowedAttributeReleasePolicy();
+            val releasePolicy = new ReturnAllowedAttributeReleasePolicy();
             val filter = new RegisteredServiceMappedRegexAttributeFilter();
             filter.setCompleteMatch(true);
             filter.setPatterns(CollectionUtils.wrap("one", "two"));
-            p.setAttributeFilter(filter);
+            releasePolicy.setAttributeFilter(filter);
 
-            registeredService.setAttributeReleasePolicy(p);
+            registeredService.setAttributeReleasePolicy(releasePolicy);
             serviceRegistry.save(registeredService);
             serviceRegistry.load();
         });
@@ -591,23 +616,25 @@ public abstract class AbstractServiceRegistryTests {
     @Test
     void verifyServiceContacts() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val contact = new DefaultRegisteredServiceContact();
             contact.setDepartment("Department");
             contact.setEmail("cas@example.org");
             contact.setName("Contact");
             contact.setPhone("123-456-7890");
-            r.setContacts(CollectionUtils.wrap(contact));
-            serviceRegistry.save(r);
+            registeredService.setContacts(CollectionUtils.wrap(contact));
+            serviceRegistry.save(registeredService);
             serviceRegistry.load();
-            serviceRegistry.delete(r);
+            serviceRegistry.delete(registeredService);
         });
     }
 
     @Test
-    public void persistCustomServiceProperties() {
+    void persistCustomServiceProperties() {
         getRegisteredServiceTypes().forEach(type -> {
-            val r = buildRegisteredServiceInstance(RandomUtils.nextInt(), type);
+            val registeredService = buildRegisteredServiceInstance(RandomUtils.nextInt(), type)
+                .setId(RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE);
             val properties = new HashMap<String, RegisteredServiceProperty>();
             val property = new DefaultRegisteredServiceProperty();
             val values = new HashSet<String>();
@@ -623,23 +650,23 @@ public abstract class AbstractServiceRegistryTests {
             property2.setValues(values2);
             properties.put("field2", property2);
 
-            r.setProperties(properties);
+            registeredService.setProperties(properties);
 
-            serviceRegistry.save(r);
+            serviceRegistry.save(registeredService);
             serviceRegistry.load();
-            assertNotNull(serviceRegistry.findServiceByExactServiceName(r.getName()));
-            assertEquals(2, r.getProperties().size());
-            assertNotNull(r.getProperties().get("field1"));
+            assertNotNull(serviceRegistry.findServiceByExactServiceName(registeredService.getName()));
+            assertEquals(2, registeredService.getProperties().size());
+            assertNotNull(registeredService.getProperties().get("field1"));
 
-            val prop = r.getProperties().get("field1");
+            val prop = registeredService.getProperties().get("field1");
             assertEquals(2, prop.getValues().size());
-            serviceRegistry.delete(r);
+            serviceRegistry.delete(registeredService);
         });
     }
 
     protected abstract ServiceRegistry getNewServiceRegistry() throws Exception;
 
-    protected void initializeServiceRegistry() throws Exception {
+    protected void initializeServiceRegistry() {
     }
 
     protected void tearDownServiceRegistry() throws Exception {
@@ -654,18 +681,10 @@ public abstract class AbstractServiceRegistryTests {
         return Stream.of(CasRegisteredService.class);
     }
 
+    @SpringBootTestAutoConfigurations
     @ImportAutoConfiguration({
-        MailSenderAutoConfiguration.class,
-        AopAutoConfiguration.class,
-        WebMvcAutoConfiguration.class,
-        RefreshAutoConfiguration.class,
-        ServletWebServerFactoryAutoConfiguration.class,
-        DispatcherServletAutoConfiguration.class,
-        EndpointAutoConfiguration.class
-    })
-    @SpringBootConfiguration
-    @Import({
         CasCoreUtilAutoConfiguration.class,
+        CasCoreScriptingAutoConfiguration.class,
         CasCoreServicesAutoConfiguration.class,
         CasCoreNotificationsAutoConfiguration.class,
         CasCoreWebAutoConfiguration.class,
@@ -675,6 +694,7 @@ public abstract class AbstractServiceRegistryTests {
         CasCoreLogoutAutoConfiguration.class,
         CasCoreCookieAutoConfiguration.class
     })
+    @SpringBootConfiguration(proxyBeanMethods = false)
     public static class SharedTestConfiguration {
     }
 
