@@ -15,7 +15,6 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -60,29 +59,29 @@ class RegisteredServiceMappedRegexAttributeFilterTests {
     }
 
     @BeforeEach
-    public void initialize() {
+    void initialize() {
         this.filter = new RegisteredServiceMappedRegexAttributeFilter();
     }
 
     @Test
-    void verifyPatternFilter() throws Throwable {
-        this.filter.setPatterns(Collections.singletonMap("memberOf", "^m"));
+    void verifyPatternFilter() {
+        this.filter.setPatterns(Map.of("memberOf", "^m"));
         val attrs = this.filter.filter(givenAttributesMap);
         assertEquals(attrs.size(), givenAttributesMap.size());
         assertEquals(2, CollectionUtils.toCollection(attrs.get("memberOf")).size());
     }
 
     @Test
-    void verifyPattern() throws Throwable {
-        this.filter = new RegisteredServiceMappedRegexAttributeFilter(Collections.singletonMap("memberOf", "^m"));
+    void verifyPattern() {
+        this.filter = new RegisteredServiceMappedRegexAttributeFilter(Map.of("memberOf", "^m"));
         val attrs = this.filter.filter(givenAttributesMap);
         assertEquals(attrs.size(), givenAttributesMap.size());
         assertEquals(2, CollectionUtils.toCollection(attrs.get("memberOf")).size());
     }
 
     @Test
-    void verifyPatternFilterExcludeUnmatched() throws Throwable {
-        this.filter.setPatterns(Collections.singletonMap("memberOf", "^m"));
+    void verifyPatternFilterExcludeUnmatched() {
+        this.filter.setPatterns(Map.of("memberOf", "^m"));
         this.filter.setExcludeUnmappedAttributes(true);
         val attrs = this.filter.filter(givenAttributesMap);
         assertEquals(1, attrs.size());
@@ -90,8 +89,8 @@ class RegisteredServiceMappedRegexAttributeFilterTests {
     }
 
     @Test
-    void verifyPatternFilterFullMatch() throws Throwable {
-        this.filter.setPatterns(Collections.singletonMap("memberOf", "^m"));
+    void verifyPatternFilterFullMatch() {
+        this.filter.setPatterns(Map.of("memberOf", "^m"));
         this.filter.setCompleteMatch(true);
         val attrs = this.filter.filter(givenAttributesMap);
         assertEquals(attrs.size(), givenAttributesMap.size() - 1);
@@ -99,7 +98,7 @@ class RegisteredServiceMappedRegexAttributeFilterTests {
     }
 
     @Test
-    void verifySerialization() throws Throwable {
+    void verifySerialization() {
         val data = SerializationUtils.serialize(this.filter);
         val secondFilter = SerializationUtils.deserializeAndCheckObject(data, RegisteredServiceAttributeFilter.class);
         assertEquals(secondFilter, this.filter);
@@ -107,7 +106,7 @@ class RegisteredServiceMappedRegexAttributeFilterTests {
 
     @Test
     void verifySerializeARegisteredServiceRegexAttributeFilterToJson() throws IOException {
-        this.filter.setPatterns(Collections.singletonMap("memberOf", "^\\w{3}$"));
+        this.filter.setPatterns(Map.of("memberOf", "^\\w{3}$"));
         MAPPER.writeValue(JSON_FILE, this.filter);
         val filterRead = MAPPER.readValue(JSON_FILE, RegisteredServiceMappedRegexAttributeFilter.class);
         assertEquals(filter, filterRead);
