@@ -10,11 +10,11 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import javax.sql.DataSource;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -96,7 +96,7 @@ class SingleRowJdbcPersonAttributeDaoTests {
     @Test
     void testPossibleUserAttributeNames() {
         val impl = new SingleRowJdbcPersonAttributeDao(testDataSource, "SELECT name, email, shirt_color FROM user_table WHERE {0}");
-        impl.setQueryAttributeMapping(Collections.singletonMap("uid", "netid"));
+        impl.setQueryAttributeMapping(Map.of("uid", "netid"));
 
         val columnsToAttributes = new HashMap<String, Object>();
         columnsToAttributes.put("name", "firstName");
@@ -121,7 +121,7 @@ class SingleRowJdbcPersonAttributeDaoTests {
     @Test
     void testSingleAttrQuery() {
         val impl = new SingleRowJdbcPersonAttributeDao(testDataSource, "SELECT name, email, shirt_color FROM user_table WHERE {0}");
-        impl.setQueryAttributeMapping(Collections.singletonMap("uid", "netid"));
+        impl.setQueryAttributeMapping(Map.of("uid", "netid"));
 
         impl.setUsernameAttributeProvider(new SimpleUsernameAttributeProvider("uid"));
 
@@ -146,7 +146,7 @@ class SingleRowJdbcPersonAttributeDaoTests {
     @Test
     void testSetNullAttributeMapping() {
         val impl = new SingleRowJdbcPersonAttributeDao(testDataSource, "SELECT name, email, shirt_color FROM user_table WHERE {0}");
-        impl.setQueryAttributeMapping(Collections.singletonMap("uid", "netid"));
+        impl.setQueryAttributeMapping(Map.of("uid", "netid"));
 
         impl.setUsernameAttributeProvider(new SimpleUsernameAttributeProvider("uid"));
 
@@ -170,7 +170,7 @@ class SingleRowJdbcPersonAttributeDaoTests {
     @Test
     void testNullAttrQuery() {
         val impl = new SingleRowJdbcPersonAttributeDao(testDataSource, "SELECT name, email, shirt_color FROM user_table WHERE {0}");
-        impl.setQueryAttributeMapping(Collections.singletonMap("uid", "netid"));
+        impl.setQueryAttributeMapping(Map.of("uid", "netid"));
         impl.setUsernameAttributeProvider(new SimpleUsernameAttributeProvider("uid"));
         val columnsToAttributes = new HashMap<String, Object>();
         columnsToAttributes.put("name", "firstName");
@@ -178,7 +178,7 @@ class SingleRowJdbcPersonAttributeDaoTests {
         impl.setResultAttributeMapping(columnsToAttributes);
 
         val attribs = impl.getPerson("susan").getAttributes();
-        assertTrue(attribs.get("dressShirtColor").isEmpty());
+        assertNull(attribs.get("dressShirtColor"));
         assertEquals(List.of("Susan"), attribs.get("firstName"));
     }
 
@@ -243,7 +243,7 @@ class SingleRowJdbcPersonAttributeDaoTests {
     @Test
     void testMultiPersonQuery() {
         val impl = new SingleRowJdbcPersonAttributeDao(testDataSource, "SELECT netid, name, email FROM user_table WHERE {0}");
-        impl.setQueryAttributeMapping(Collections.singletonMap("shirt", "shirt_color"));
+        impl.setQueryAttributeMapping(Map.of("shirt", "shirt_color"));
         impl.setUsernameAttributeProvider(new SimpleUsernameAttributeProvider("uid"));
 
         val columnsToAttributes = new HashMap<String, Object>();
@@ -271,16 +271,16 @@ class SingleRowJdbcPersonAttributeDaoTests {
     void testProperties() {
         val impl = new SingleRowJdbcPersonAttributeDao(testDataSource, "SELECT netid, name, email FROM user_table WHERE {0}");
 
-        impl.setQueryAttributeMapping(Collections.singletonMap("shirt", "shirt_color"));
-        assertEquals(Collections.singletonMap("shirt", Collections.singleton("shirt_color")), impl.getQueryAttributeMapping());
+        impl.setQueryAttributeMapping(Map.of("shirt", "shirt_color"));
+        assertEquals(Map.of("shirt", Set.of("shirt_color")), impl.getQueryAttributeMapping());
 
         val columnsToAttributes = new HashMap<String, Object>();
         columnsToAttributes.put("netid", "uid");
         columnsToAttributes.put("name", "firstName");
 
         val expectedColumnsToAttributes = new HashMap<String, Set<String>>();
-        expectedColumnsToAttributes.put("netid", Collections.singleton("uid"));
-        expectedColumnsToAttributes.put("name", Collections.singleton("firstName"));
+        expectedColumnsToAttributes.put("netid", Set.of("uid"));
+        expectedColumnsToAttributes.put("name", Set.of("firstName"));
 
         impl.setResultAttributeMapping(columnsToAttributes);
         assertEquals(expectedColumnsToAttributes, impl.getResultAttributeMapping());
