@@ -15,10 +15,14 @@ import org.apereo.cas.util.RandomUtils;
 
 import lombok.val;
 import org.apache.hc.core5.net.URIBuilder;
+import org.apereo.inspektr.common.web.ClientInfo;
+import org.apereo.inspektr.common.web.ClientInfoHolder;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.HttpHeaders;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.web.context.request.RequestContextHolder;
@@ -36,14 +40,24 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Misagh Moayyed
  * @since 6.3.0
  */
-@Tag("OIDC")
+@Tag("OIDCServices")
 class OidcServicesManagerRegisteredServiceLocatorTests extends AbstractOidcTests {
     @Autowired
     @Qualifier("oidcServicesManagerRegisteredServiceLocator")
     private ServicesManagerRegisteredServiceLocator oidcServicesManagerRegisteredServiceLocator;
+
+    @BeforeEach
+    void before() {
+        val request = new MockHttpServletRequest();
+        request.setRemoteAddr("223.456.789.000");
+        request.setLocalAddr("223.456.789.100");
+        request.addHeader(HttpHeaders.USER_AGENT, "Firefox");
+        ClientInfoHolder.setClientInfo(ClientInfo.from(request));
+        RequestContextHolder.setRequestAttributes(new ServletRequestAttributes(new MockHttpServletRequest()));
+    }
     
     @Test
-    void verifyFindByQuery() throws Throwable {
+    void verifyFindByQuery() {
         val service1 = getOidcRegisteredService(UUID.randomUUID().toString(),
             "https://app.example.org/%s".formatted(RandomUtils.randomAlphabetic(4)));
         val service2 = getOidcRegisteredService(UUID.randomUUID().toString(),
@@ -94,7 +108,7 @@ class OidcServicesManagerRegisteredServiceLocatorTests extends AbstractOidcTests
     }
 
     @Test
-    void verifyOperation() throws Throwable {
+    void verifyOperation() {
         assertNotNull(oidcServicesManagerRegisteredServiceLocator);
         assertEquals(OidcServicesManagerRegisteredServiceLocator.DEFAULT_ORDER, oidcServicesManagerRegisteredServiceLocator.getOrder());
 
@@ -108,7 +122,7 @@ class OidcServicesManagerRegisteredServiceLocatorTests extends AbstractOidcTests
     }
 
     @Test
-    void verifyReverseOperation() throws Throwable {
+    void verifyReverseOperation() {
         val service1 = RegisteredServiceTestUtils.getRegisteredService(".+");
         service1.setEvaluationOrder(5);
 
@@ -123,7 +137,7 @@ class OidcServicesManagerRegisteredServiceLocatorTests extends AbstractOidcTests
         servicesManager.save(service1, service2, service3);
 
         var svc = webApplicationServiceFactory.createService(
-            String.format("https://app.example.org/whatever?%s=%s", OAuth20Constants.CLIENT_ID, oidcClientId));
+            "https://app.example.org/whatever?%s=%s".formatted(OAuth20Constants.CLIENT_ID, oidcClientId));
         var result = servicesManager.findServiceBy(svc);
         assertInstanceOf(OidcRegisteredService.class, result);
 
