@@ -4,7 +4,6 @@ import org.apereo.cas.authentication.DefaultAuthenticationServiceSelectionPlan;
 import org.apereo.cas.authentication.support.NoOpProtocolAttributeEncoder;
 import org.apereo.cas.support.saml.AbstractOpenSamlTests;
 import org.apereo.cas.support.saml.authentication.SamlResponseBuilder;
-import org.apereo.cas.support.saml.authentication.principal.SamlServiceFactory;
 import org.apereo.cas.support.saml.util.Saml10ObjectBuilder;
 import org.apereo.cas.web.support.DefaultArgumentExtractor;
 import org.apereo.cas.web.view.attributes.NoOpProtocolAttributesRenderer;
@@ -16,7 +15,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -33,14 +33,14 @@ class Saml10FailureResponseViewTests extends AbstractOpenSamlTests {
     private Saml10FailureResponseView view;
 
     @BeforeEach
-    public void initialize() {
+    void initialize() {
 
         val builder = new Saml10ObjectBuilder(this.configBean);
         val samlResponseBuilder = new SamlResponseBuilder(builder, null,
             null, "0", "PT30S",
             new NoOpProtocolAttributeEncoder(), null);
         view = new Saml10FailureResponseView(new NoOpProtocolAttributeEncoder(), null,
-            new DefaultArgumentExtractor(new SamlServiceFactory()),
+            new DefaultArgumentExtractor(List.of(webApplicationServiceFactory)),
             null,
             new DefaultAuthenticationServiceSelectionPlan(),
             NoOpProtocolAttributesRenderer.INSTANCE,
@@ -54,7 +54,7 @@ class Saml10FailureResponseViewTests extends AbstractOpenSamlTests {
         request.addParameter("TARGET", "service");
 
         val description = "Validation failed";
-        this.view.renderMergedOutputModel(Collections.singletonMap("description", description), request, response);
+        this.view.renderMergedOutputModel(Map.of("description", description), request, response);
 
         val responseText = response.getContentAsString();
         assertTrue(responseText.contains("Status"));
